# facttrack

./: .gitignore  BUILD_LOG.md  PROJECT_DESIGN.md  README.md  STATUS.md  pyproject.toml
docs/research/: anderson_landman_review_2026-05-13.md  probate_access_2026-05-13.md
docs/verification/: hanks_aoh_search_2026-05-13.txt  llm_clauses_anderson_2026-05-13.txt  release_verifier_48001_2026-05-13.txt
reports/county_research_48001/: index.html  map.html  report.data.json  report.html  report.typ
reports/county_research_48001/dealmemos/: dealmemo_tract_1.data.json  dealmemo_tract_10.data.json  dealmemo_tract_11.data.json  dealmemo_tract_12.data.json  dealmemo_tract_13.data.json  dealmemo_tract_14.data.json  dealmemo_tract_14.typ  dealmemo_tract_15.data.json  dealmemo_tract_16.data.json  dealmemo_tract_17.data.json  dealmemo_tract_18.data.json  dealmemo_tract_19.data.json  dealmemo_tract_2.data.json  dealmemo_tract_20.data.json  dealmemo_tract_21.data.json  dealmemo_tract_22.data.json  dealmemo_tract_23.data.json  dealmemo_tract_24.data.json  dealmemo_tract_25.data.json  dealmemo_tract_26.data.json  (+25 more)
reports/demo_anderson_001/: map.html  report.html
reports/demo_houston_001/: map.html  report.html
scripts/: discover_doc_viewer.py  discover_publicsearch_api.py  init_db.sh  probe_doc_viewer_pagination.py  probe_doctype_filter.py  probe_pagination.py  probe_publicsearch_filters.py  run_anderson_pipeline.sh  scan_all_counties.sh  scan_county.sh  scan_mini_counties.sh  test_multi_page_fetch.py  verify_hanks_aoh.py
sql/: schema.sql
src/facttrack/: __init__.py
(+36 files in other folders)
